[gd_scene load_steps=12 format=3 uid="uid://jmsnxtjlkfgl"]

[ext_resource type="PackedScene" uid="uid://dhl818ymbrkpr" path="res://Graphics/Ships/FlyEnemy.blend" id="1_03iwp"]
[ext_resource type="Script" path="res://scenes/fly_enemy.gd" id="1_57v3o"]
[ext_resource type="Shader" uid="uid://d1dparl2ad62" path="res://scenes/Shaders/fly_enemy_hit_flash.tres" id="3_x4o5g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hcun"]
render_priority = 0
shader = ExtResource("3_x4o5g")
shader_parameter/Enabled = true
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/ColorParameter2 = Color(0.187257, 0.068654, 0.009912, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_8egqa"]
size = Vector3(13.2881, 3.02759, 11.3438)

[sub_resource type="SphereMesh" id="SphereMesh_mhku0"]
radial_segments = 12
rings = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i4n2s"]

[sub_resource type="SphereMesh" id="SphereMesh_xi32y"]
radius = 1.0
height = 2.0
radial_segments = 12
rings = 10

[sub_resource type="Animation" id="Animation_4t0c0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-6.28319, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.29712, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlyEnemy/Cylinder:surface_material_override/0:shader_parameter/Enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a448c"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyEnemy/Cylinder:surface_material_override/0:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0bp7"]
_data = {
"RESET": SubResource("Animation_4t0c0"),
"hit_flash": SubResource("Animation_a448c")
}

[node name="FlyEnemy" type="Area3D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_57v3o")
spawn_place_relative = Vector3(100, 200, 0)

[node name="FlyEnemy" parent="." instance=ExtResource("1_03iwp")]

[node name="Cylinder" parent="FlyEnemy" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_1hcun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 4.46638e-06, 0, -4.46638e-06, 1, -2.29712, 0, 0)
shape = SubResource("BoxShape3D_8egqa")

[node name="WeaponHandler" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="WeaponHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.15284)
gizmo_extents = 0.0

[node name="Timer" type="Node" parent="."]

[node name="FireTimer" type="Timer" parent="Timer"]
wait_time = 2.0

[node name="Particles" type="Node3D" parent="."]

[node name="CPUParticles3D" type="CPUParticles3D" parent="Particles"]
emitting = false
amount = 15
lifetime = 0.5
explosiveness = 0.37
randomness = 0.59
lifetime_randomness = 0.11
mesh = SubResource("SphereMesh_mhku0")
direction = Vector3(0, 1, -1)
spread = 12.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
linear_accel_min = -3.45
linear_accel_max = 14.44
damping_min = 3.093
damping_max = 5.155
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0, 0, 0, 1)
hue_variation_max = 1.0

[node name="CPUParticles3D2" type="CPUParticles3D" parent="Particles"]
material_override = SubResource("StandardMaterial3D_i4n2s")
emitting = false
amount = 15
lifetime = 0.5
explosiveness = 0.37
randomness = 0.59
lifetime_randomness = 0.11
mesh = SubResource("SphereMesh_xi32y")
direction = Vector3(0, 1, -1)
spread = 12.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
linear_accel_min = -3.45
linear_accel_max = 14.44
damping_min = 3.093
damping_max = 5.155
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0, 0, 0, 1)
hue_variation_max = 1.0

[node name="Aim" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.78047)

[node name="Target" type="Marker3D" parent="Aim"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22.5764)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j0bp7")
}

[connection signal="timeout" from="Timer/FireTimer" to="." method="_on_fire_timer_timeout"]

[editable path="FlyEnemy"]
